Sign CSS, adjustments

--- a/encryptor-challenge/index.html
+++ b/encryptor-challenge/index.html
@@ -28,7 +28,7 @@
 
       <!-- Attention -->
       <div class="attention__message">
-        Apenas letras minúsculas e sem acento.
+        <strong class="sign">!</strong>Apenas letras minúsculas e sem acento.
       </div>
 
       <!-- Encrypt/Decrypt buttons -->
