--- a/encryptor-challenge/index.html
+++ b/encryptor-challenge/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Encryptor Challenge</title>
+    <title>Criptografador</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
